--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,26 +5,35 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/headline"
-        android:layout_width="match_parent"
-        android:background="#B36C59"
-        
-        android:paddingEnd="25dp"
-        android:paddingStart="25dp"
-        android:paddingTop="25dp"
-        android:paddingBottom="25dp"
 
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        
-        android:textColor="@android:color/black"
-        android:fontFamily="sans-serif"
-        android:textSize="20sp" />
+        card_view:cardCornerRadius="4dp">
+        <TextView
+            android:id="@+id/headline"
+            android:layout_width="match_parent"
+            android:background="#B36C59"
+
+            android:paddingEnd="25dp"
+            android:paddingStart="25dp"
+            android:paddingTop="25dp"
+            android:paddingBottom="25dp"
+
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+
+            android:textColor="@android:color/black"
+            android:fontFamily="sans-serif"
+            android:textSize="20sp" />
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
